# REAL--ESTATE

./: .gitignore  Dockerfile  README.md  app.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  test_full.py  test_openenv_endpoints.py  validate_openenv.py
agents/: __init__.py  baselines.py  evaluate.py  train.py
dashboard/: app.js  index.html  style.css
env/: __init__.py  config.py  market_engine.py  property_manager.py  real_estate_env.py
server/: Dockerfile  __init__.py  app.py  requirements.txt
utils/: gradio app.py  logger.py  plotting.py
